--- a/project1/Redirect.html
+++ b/project1/Redirect.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Sign In</h1>
-    <form action="Restaurent.html">
+    <form action="index.html">
         <label for="username">Username:</label>
         <input type="text" id="username" name="username" required><br><br>
         <label for="password">Password:</label>
