--- a/project1/Signin.html
+++ b/project1/Signin.html
@@ -26,7 +26,7 @@
                 <input type="email" placeholder="Email">
                 <input type="password" placeholder="Password">
                 <input type="password" placeholder="Confirm Password">
-                <button><a href="Restaurent.html"></a>Sign Up</button>
+                <button><a href="index.html"></a>Sign Up</button>
             </form>
         </div>
         <div class="form-container sign-in">
@@ -42,7 +42,7 @@
                 <input type="email" placeholder="Email">
                 <input type="password" placeholder="Password">
                 <a href="#">Forget Your Password?</a>
-                <a href="Restaurent.html"><button>Sign in</button></a>
+                <a href="index.html"><button>Sign in</button></a>
             </form>
         </div>
         <div class="toggle-container">
